Add FSD architecture for frontend

--- a/Frontend/Pages/Home/UI/Error.cshtml
+++ b/Frontend/Pages/Home/UI/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using Frontend.Entities.ErrorViewModel.Model
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
